kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hipster-shop-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
      - shop.35.184.239.21.nip.io
    secretName: shop.35.184.239.21.nip.io
  rules:
  - host: shop.35.184.239.21.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
